@@ -21,6 +21,7 @@ PostGIS 2.5.3
   - #4470, ST_GeomFromGeoJSON crash on empty rings (Darafei Praliaskouski)
   - #4420, update path does not exists for address_standardizer extension (Regina Obe)
   - #4480, Geography Distance inconsistent with Intersects (Paul Ramsey)
+  - #4481, Improve libprotobuf detection for old systems (Paul Ramsey)
 
 
 PostGIS 2.5.2
